refactor(lotto): Lottos 생성시에 Lotto 목록 넣어주도록 변경