@@ -1,26 +1,31 @@
 package lotto.model;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
-
 import static org.assertj.core.api.Assertions.assertThat;
+
+import java.util.ArrayList;
+import java.util.List;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
 public class LottosTest {
 
-    private Lotto lotto;
-    private Lottos lottos;
+    private Lotto lotto1;
+    private Lotto lotto2;
+    private List<Lotto> lottoList;
 
     @BeforeEach
     void init() {
-        lotto = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6));
-        lottos = new Lottos();
+        lotto1 = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+        lotto2 = new Lotto(List.of(7, 8, 9, 10, 11, 12));
+        lottoList = new ArrayList<>(List.of(lotto1, lotto2));
     }
 
     @Test
-    void 저장_테스트() {
-        lottos.insert(lotto);
-        assertThat(lottos.getLottos()).contains(lotto);
+    @DisplayName("Lottos에 Lotto 저장 테스트")
+    void lottosSaveTest() {
+        Lottos lottos = new Lottos(lottoList);
+        assertThat(lottos.getLottos()).containsExactly(lotto1, lotto2);
     }
 }
